bk_ida/gccida/c1/reg_overlap_mentioned_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_overlap_mentioned_p/src/rtlanal.c:1928:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v16 = ( ( unsigned int)( mode_class_0[v17] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_overlap_mentioned_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_overlap_mentioned_p/src/rtlanal.c:1957:73: error: expected expression
while ( v18[v19 - 2] != 101 || !reg_overlap_mentioned_p( rtx, *( ( rtx *)in + v19 - 1)) ) 
                                                                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_overlap_mentioned_p/src/obj/rtlanal.o] Error 1
